@@ -11,6 +11,7 @@ import org.elasticsearch.gradle.internal.precommit.CheckForbiddenApisTask
 
 apply plugin: 'elasticsearch.build'
 apply plugin: 'elasticsearch.publish'
+apply plugin: 'elasticsearch.benchmark'
 
 dependencies {
   implementation project(':libs:x-content')
@@ -19,6 +20,8 @@ dependencies {
   testImplementation(project(":test:framework")) {
     exclude group: 'org.elasticsearch', module: 'swisshash'
   }
+
+  benchmarkImplementation project(':x-pack:plugin:esql:compute')
 }
 
 // A static reference to the Vector API would cause an unsuppressible warning
@@ -26,7 +29,11 @@ dependencies {
 tasks.named('compileJava').configure {
   options.compilerArgs << '--add-modules=jdk.incubator.vector'
   options.compilerArgs << '--add-reads=org.elasticsearch.swisshash=jdk.incubator.vector'
-  options.compilerArgs -= '-Werror'
+  // Suppress the "using incubating module(s)" mandatory warning that javac emits for
+  // jdk.incubator.vector. On JDK 21 this warning has no named lint category and cannot
+  // be individually suppressed. -nowarn is scoped to this submodule only.
+  // TODO: replace with -Xlint:-incubating when the compile toolchain moves to JDK 22+
+  options.compilerArgs << '-nowarn'
 }
 
 tasks.named('javadoc').configure {
@@ -34,6 +41,11 @@ tasks.named('javadoc').configure {
   options.addStringOption("-add-reads", "org.elasticsearch.swisshash=jdk.incubator.vector")
 }
 
+tasks.named('benchmark').configure {
+  jvmArgs '--add-modules=jdk.incubator.vector'
+}
+
 tasks.withType(CheckForbiddenApisTask).configureEach {
   ignoreMissingClasses = true
+  replaceSignatureFiles 'jdk-signatures'
 }
